2011-06-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: new test dedicated to `--add-missing' and `--copy'
	* tests/add-missing.test: New test.
	* tests/Makefile.am (TESTS): Update.
	Suggested by Peter Rosin.

2011-06-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: use 'fatal_' and 'framework_failure_' for hard errors
	* tests/defs (require_xsi): Use `fatal_', not `framework_failure',
	to report an invalid usage.
	* tests/remake-gnulib-remove-header.test: Prefer using `fatal_'
	with a proper error message over a direct call to `Exit 99'.
	* tests/pr8365-remake-timing.test: Likewise.
	* tests/cygnus-imply-foreign.test: Likewise.
	* tests/missing6.test: Likewise.
	* tests/cond8.test: Likewise.
	* tests/cond33.test: Likewise.
	* tests/python-virtualenv.test: Prefer using `framework_failure_'
	with a proper error message over a direct call to `Exit 99'.
	* tests/instspc-tests.sh: Prefer using `framework_failure_' and
	`fatal_' over direct calls to `Exit 99'.
	(fatal_): Define this (which is a simplified version of the one
	in `tests/defs') for early uses (i.e., before `tests/defs'
	gets sourced).
	* tests/depmode-tests.sh: Likewise.  Also, simplify the
	'get_depmodes' function and calls to it accordingly.

2011-06-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	self tests: check new 'fatal_' function
	* tests/self-check-exit.test: Also check the new 'fatal_'
	function.

2011-06-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: new function 'fatal_', for hard errors
	Before this patch, the only way offered by tests/defs to
	properly signal a hard error was the `framework_failure_'
	function.  But the error message issued by that function,
	as its name would suggest, refers to a set-up failure in the
	testsuite, while hard errors can obviously also be due to
	other reasons.  The best way to fix this inconsistency is to
	introduce a new function with a more general error message.