@@ -1,3 +1,10 @@
+2011-06-13  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: don't hard-code test name in txinfo21.test
+	* tests/txinfo21.test: Use `$me' instead of hard-coding the
+	current testcase name "txinfo21".  Add a trailing `:' command
+	since we are at it.
+
 2011-06-10  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: new test dedicated to `--add-missing' and `--copy'
